continuato a lavorare sui chunk e il loro rendering