@@ -1,5 +1,5 @@
 #!/bin/zsh
 
-mvn clean compile
+mvn -q clean compile
 mvn dependency:build-classpath -Dmdep.outputFile=.classpath
-java -XstartOnFirstThread -cp target/classes:$(cat .classpath) com.asciugano.Main
+java -XstartOnFirstThread --enable-native-access=ALL-UNNAMED  -cp target/classes:$(cat .classpath) com.asciugano.Main
